Make GOV.UK CSS available in asset pipeline

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,11 @@
   <link rel="apple-touch-icon" href="/assets/images/govuk-apple-touch-icon.png">
 
   <!--[if !IE 8]><!-->
-  <link href="/govuk-frontend/all.css" rel="stylesheet" />
+    <%= stylesheet_link_tag 'govuk-frontend/all' %>
   <!--<![endif]-->
 
   <!--[if IE 8]>
-    <link href="/govuk-frontend/all-ie8.css" rel="stylesheet" />
+    <%= stylesheet_link_tag 'govuk-frontend/all-ie8' %>
   <![endif]-->
 
   <!--[if lt IE 9]>
