--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   <![endif]-->
 
   <!--[if lt IE 9]>
-    <script src="/html5-shiv/html5shiv.js"></script>
+    <%= javascript_include_tag 'html5shiv/dist/html5shiv' %>
   <![endif]-->
 
   <meta property="og:image" content="/assets/images/govuk-opengraph-image.png">
