Add GOV.UK JS to asset pipeline

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -91,7 +91,7 @@
     </div>
   </footer>
 
-  <script src="/govuk-frontend/all.js"></script>
+  <%= javascript_include_tag 'govuk-frontend/all' %>
   <script>
     window.GOVUKFrontend.initAll()
 
