--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,7 @@
 <div class="govuk-body">
   <h1>Home#index</h1>
   <p>Find me in app/views/home/index.html.erb</p>
+
+  <h2>Supplier count</h2>
+  <%= Supplier.count %>
 </div>
