--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,20 @@
 <div class="govuk-body">
-  <h1>Home#index</h1>
-  <p>Find me in app/views/home/index.html.erb</p>
+  <h1>Find an agency supply teacher</h1>
+
+  <p>Use this service to:</p>
+  <ul>
+    <li>find and hire a worker, using an agency</li>
+    <li>create a shortlist of suppliers based on your needs and download or save it</li>
+  </ul>
+  <p>You can use a separate service to find a managed service provider who can manage all your supply needs for you.</p>
+
+  <button>Start now</button>
+
+  <h2>Before you start</h2>
+  <p>To use the service, you will need to register for an account and get login details.</p>
+  <p>You will also need to have:</p>
+  <ul>
+    <li>your school's postcode, name or URN</li>
+    <li>details of how long you will want the worker</li>
+  </ul>
 </div>
