--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,20 +1,30 @@
 <div class="govuk-body">
-  <h1>Find an agency supply teacher</h1>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
-  <p>Use this service to:</p>
-  <ul>
-    <li>find and hire a worker, using an agency</li>
-    <li>create a shortlist of suppliers based on your needs and download or save it</li>
-  </ul>
-  <p>You can use a separate service to find a managed service provider who can manage all your supply needs for you.</p>
+      <h1 class="govuk-heading-xl">Find an agency supply teacher</h1>
 
-  <button>Start now</button>
+      <p>Use this service to:</p>
 
-  <h2>Before you start</h2>
-  <p>To use the service, you will need to register for an account and get login details.</p>
-  <p>You will also need to have:</p>
-  <ul>
-    <li>your school's postcode, name or URN</li>
-    <li>details of how long you will want the worker</li>
-  </ul>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>find and hire a worker, using an agency</li>
+        <li>create a shortlist of suppliers based on your needs and download or save it</li>
+      </ul>
+
+      <p>You can use a separate service to find a managed service provider who can manage all your supply needs for you.</p>
+
+      <%= link_to 'Start now', search_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+
+      <h2 class="govuk-heading-m">Before you start</h2>
+
+      <p>To use the service, you will need to register for an account and get login details.</p>
+
+      <p>You will also need to have:</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>your school's postcode, name or URN</li>
+        <li>details of how long you will want the worker</li>
+      </ul>
+    </div>
+  </div>
 </div>
