--- a/app/assets/stylesheets/ccs_overrides.scss
+++ b/app/assets/stylesheets/ccs_overrides.scss
@@ -1,26 +1,58 @@
 @import './shared/colors.scss';
 
 .govuk-header {
-  background-color: $ccs_header;
+  background-color: $ccs_header_bg;
 }
 
 .govuk-header__container {
   border-bottom: none;
+}
+
+.govuk-footer {
+  background-color: $ccs_footer_bg;
+  color: $ccs_footer_fg;
+  padding: 0;
+}
+
+.govuk-footer__meta {
+  justify-content: flex-start;
+}
+
+.govuk-footer__meta-item {
+  margin-top: 15px;
+}
+
+.govuk-header__container, .govuk-footer__container {
   padding: 15px 0;
 }
 
-.govuk-header__logotype img {
+.govuk-header__logotype img, .govuk-footer__logotype img {
   width: 110px;
   height: 90px;
 }
 
 @media (min-width: 641px) {
-  .govuk-header__container {
-    padding: 30px 0;
+  .govuk-header__logotype img,
+  .govuk-footer__logotype img {
+    width: 140px;
   }
 
-  .govuk-header__logotype img {
-    width: 140px;
+  .govuk-header__logotype img,
+  .govuk-footer__logotype img,
+  .govuk-footer__meta {
     height: 113px;
+  }
+
+  .govuk-footer__meta {
+    justify-content: flex-end;
+  }
+
+  .govuk-footer__meta-item {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .govuk-header__container, .govuk-footer__container {
+    padding: 30px 0;
   }
 }
