--- a/app/assets/stylesheets/shared/colors.scss
+++ b/app/assets/stylesheets/shared/colors.scss
@@ -1,4 +1,6 @@
-$ccs_header: #9b1a47;
+$ccs_header_bg: #9b1a47;
+$ccs_footer_bg: #2f2f2f;
+$ccs_footer_fg: white;
 $ccs_button: #007e8a;
 $ccs_link: #007194;
 $ccs_link_hover: #15a0cc;
