Add basic postcode search
We're validating the postcode, geocoding it and then using that to find
branches within 25 miles.

We've hardcoded the 25 mile range for now.

We've added a small number of suppliers and branches to the seeds data
to help us test locally.

We've added a search controller for the postcode form. We suspect this
might change but it's useful enough for now given that it helps us
deliver the story.

Co-authored-by: Paul Battley <pbattley@gmail.com>

--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -1,5 +1,14 @@
-<ol>
-  <% @branches.each do |branch| %>
-    <li><%= branch.supplier.name %> <%= branch.postcode %></li>
-  <% end %>
-</ol>
+<div class="govuk-body">
+  <h1 class="govuk-heading-xl">Supplier list</h1>
+
+  <p>
+    <span class="govuk-body-l"><%= @branches.count %></span>
+    <%= 'result'.pluralize(@branches.count) %> found within <strong><%= Branch::DEFAULT_SEARCH_RANGE_IN_MILES %> miles</strong> of <strong><%= @postcode %></strong>
+  </p>
+
+  <ol>
+    <% @branches.each do |branch| %>
+      <li><%= branch.supplier.name %> <%= branch.postcode %></li>
+    <% end %>
+  </ol>
+</div>
