--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
       <div class="govuk-header__logo">
         <a href="/" class="govuk-header__link govuk-header__link--homepage">
           <span class="govuk-header__logotype">
-            <%= image_tag('ccs_logotype_med', alt: 'Crown Commercial Service') %>
+            <%= image_tag('ccs_logotype_med.png', alt: 'Crown Commercial Service') %>
           </span>
         </a>
       </div>
@@ -66,7 +66,7 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-third">
           <span class="govuk-footer__logotype">
-            <%= image_tag('ccs_logotype_med', alt: '') %>
+            <%= image_tag('ccs_logotype_med.png', alt: '') %>
           </span>
         </div>
 
