Show flash errors at top of page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,11 @@
 
   <div class="govuk-width-container">
     <main class="govuk-main-wrapper " id="main-content" role="main">
+      <% if flash.key?(:error) %>
+        <span class="govuk-error-message">
+          <%= flash[:error] %>
+        </span>
+      <% end %>
       <%= yield %>
     </main>
   </div>
