--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -16,7 +16,13 @@
       <div class="govuk-grid-column-full">
         <div class="govuk-grid-row">
           <h1 class="govuk-heading-xl">Suppliers List</h1>
-          <p class="govuk-body"><span class="govuk-body-l"><%= @branches.count %></span> results found within <strong><%= Branch::DEFAULT_SEARCH_RANGE_IN_MILES %> miles</strong> of <strong><%= @postcode %></strong></p>
+          <p class="govuk-body">
+            <% if @point %>
+            <span class="govuk-body-l"><%= @branches.count %></span> results found within <strong><%= Branch::DEFAULT_SEARCH_RANGE_IN_MILES %> miles</strong> of <strong><%= @postcode %></strong>
+            <% else %>
+            <span class="govuk-body-l"><%= @branches.count %></span> results found
+            <% end %>
+          </p>
         </div>
         <% if @branches.any? %>
           <% @branches.each do |branch| %>
