--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -10,7 +10,7 @@
       </span>
     </p>
   </div>
-  <a href="#" class="govuk-back-link">Back</a>
+  <%= link_to 'Back', search_path, class: 'govuk-back-link' %>
   <main class="govuk-main-wrapper">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
