--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -55,3 +55,5 @@ $govuk-font-family-print: sans-serif;
 
 $govuk-font-weight-regular: 400;
 $govuk-font-weight-bold: 600;
+
+@import './_button.scss'
