Add a link to print the supplier list page
We want to provide buyers with some options to save their work. This
commit adds a link to print the page using the default stylesheet and
browser printer dialog.

--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -20,5 +20,12 @@
         <% end %>
       </div>
     </div>
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-full">
+        <p class="govuk-body">
+          <a href="javascript:window.print()" class="govuk-link">Print this page</a>
+        </p>
+      </div>
+    </div>
   </main>
 </div>
