--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -1,5 +1,5 @@
 <div class="govuk-width-container">
-  <%= link_to 'Back', search_path, class: 'govuk-back-link' %>
+  <%= link_to 'Back', search_path(params.permit(:nominated_worker, :postcode)), class: 'govuk-back-link' %>
   <main class="govuk-main-wrapper">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
