--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'Back', homepage_path, class: 'govuk-back-link' %>
+
 <%= form_tag '/branches', method: :get do %>
   <div class="govuk-form-group">
     <label class="govuk-label" for="postcode">
