Update postcode question text to match design

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -3,7 +3,7 @@
 <%= form_tag '/branches', method: :get do %>
   <div class="govuk-form-group">
     <label class="govuk-label" for="postcode">
-      Postcode of your school
+      What is your school's postcode?
     </label>
     <%= text_field_tag :postcode, '', class: 'govuk-input' %>
   </div>
