Display branch telephone number on branch index page

--- a/app/views/branches/_branch.html.erb
+++ b/app/views/branches/_branch.html.erb
@@ -3,6 +3,7 @@
   <div class="govuk-grid-column-one-half">
     <p class="govuk-body">
       <%= branch.contact_name %><br />
+      <%= branch.telephone_number %><br />
       <%= mail_to(branch.contact_email) %>
     </p>
   </div>
