Add supplier accreditation body to the branches index page

--- a/app/views/branches/_branch.html.erb
+++ b/app/views/branches/_branch.html.erb
@@ -1,13 +1,18 @@
 <div class="govuk-grid-row branch">
   <h2 class="govuk-heading-l"><%= branch.supplier.name %></h2>
-  <div class="govuk-grid-column-one-half">
+  <div class="govuk-grid-column-one-third">
+    <ul class="govuk-list">
+      <li><b>Accreditation Body:</b> <%= branch.supplier.accreditation_body %></li>
+    </ul>
+  </div>
+  <div class="govuk-grid-column-one-third">
     <p class="govuk-body">
       <%= branch.contact_name %><br />
       <%= branch.telephone_number %><br />
       <%= mail_to(branch.contact_email) %>
     </p>
   </div>
-  <div class="govuk-grid-column-one-half">
+  <div class="govuk-grid-column-one-third">
     <% if @point %>
       <p class="govuk-body govuk-!-font-size-48 distance">
         <%= number_with_precision(metres_to_miles(@point.distance(branch.location)), precision: 1) %>
