Add branch name to the branches index page
Co-authored-by: Ben Griffiths <bengriffiths@gmail.com>

--- a/app/views/branches/_branch.html.erb
+++ b/app/views/branches/_branch.html.erb
@@ -2,6 +2,7 @@
   <h2 class="govuk-heading-l"><%= branch.supplier.name %></h2>
   <div class="govuk-grid-column-one-third">
     <ul class="govuk-list">
+      <li><b>Branch:</b> <%= branch.name %></li>
       <li><b>Accreditation Body:</b> <%= branch.supplier.accreditation_body %></li>
     </ul>
   </div>
