--- a/app/views/branches/_branch.html.erb
+++ b/app/views/branches/_branch.html.erb
@@ -2,7 +2,9 @@
   <h2 class="govuk-heading-l"><%= branch.supplier.name %></h2>
   <div class="govuk-grid-column-one-third">
     <ul class="govuk-list">
-      <li><b>Branch:</b> <%= branch.name %></li>
+      <% if branch.name.present? %>
+        <li><b>Branch:</b> <%= branch.name %></li>
+      <% end %>
       <li><b>Accreditation Body:</b> <%= branch.supplier.accreditation_body %></li>
     </ul>
   </div>
