WIP: Add journey for workers on school payroll

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -36,8 +36,48 @@
       </div>
       <%= submit_tag 'Continue', class: "govuk-button" %>
     <% end %>
-  <% else %>
-    <p>This system only allows you to search for nominated workers at the moment</p>
+  <% elsif params[:nominated_worker] == 'no' %>
+    <% if params[:school_payroll].blank? %>
+      <%= form_tag '/search', method: :get do %>
+        <%= hidden_field_tag :nominated_worker, :no %>
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+              <h1 class="govuk-fieldset__heading">
+                Do you want to put the worker on the school's payroll?
+              </h1>
+            </legend>
+            <div class="govuk-radios">
+              <div class="govuk-radios__item">
+                <%= radio_button_tag :school_payroll, :yes, false, class: 'govuk-radios__input' %>
+                <%= label_tag :school_payroll_yes, 'Yes', class: 'govuk-label govuk-radios__label' %>
+              </div>
+              <div class="govuk-radios__item">
+                <%= radio_button_tag :school_payroll, :no, false, class: 'govuk-radios__input' %>
+                <%= label_tag :school_payroll_no, 'No', class: 'govuk-label govuk-radios__label' %>
+              </div>
+            </div>
+          </fieldset>
+        </div>
+        <%= submit_tag 'Continue', class: "govuk-button" %>
+      <% end %>
+    <% else %>
+      <% if params[:school_payroll] == 'yes' %>
+      <%= form_tag '/branches', method: :get do %>
+        <%= hidden_field_tag :nominated_worker, :yes %>
+        <%= hidden_field_tag :school_payroll, :yes %>
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="postcode">
+            What is your school's postcode?
+          </label>
+          <%= text_field_tag :postcode, '', class: 'govuk-input' %>
+        </div>
+        <%= submit_tag 'Continue', class: "govuk-button" %>
+      <% end %>
+      <% else %>
+        <p>This system only allows you to search for nominated workers and workers on school payroll at the moment</p>
+      <% end %>
+    <% end %>
   <% end %>
 
 <% end %>
