Display nominated worker rate in supplier search results
A Supplier has many Rates. A Rate has a job type (e.g. 'nominated') and
a mark_up (e.g. 0.1, representing 10%).

Note that we'll need to add something like length of employment to Rates
in future but we don't need that for nominated worker rates: they appear
to be the same irrespective of contract length.

It would appear that Rails now adds an implicit validation for a
belongs_to association. I've added the `supplier` to the `Rate` factory
so that it builds a minimally viable `Rate`.

--- a/app/views/branches/_branch.html.erb
+++ b/app/views/branches/_branch.html.erb
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row branch">
   <h2 class="govuk-heading-l"><%= branch.supplier.name %></h2>
-  <div class="govuk-grid-column-one-third">
+  <div class="govuk-grid-column-one-quarter">
     <ul class="govuk-list">
       <% if display_name_for_branch(branch).present? %>
         <li><b>Branch:</b> <%= display_name_for_branch(branch) %></li>
@@ -10,14 +10,22 @@
       <% end %>
     </ul>
   </div>
-  <div class="govuk-grid-column-one-third">
+  <div class="govuk-grid-column-one-quarter">
     <p class="govuk-body">
       <%= branch.contact_name %><br />
       <%= branch.telephone_number %><br />
       <%= mail_to(branch.contact_email) %>
     </p>
   </div>
-  <div class="govuk-grid-column-one-third">
+  <div class="govuk-grid-column-one-quarter">
+    <% if @point %>
+      <p class="govuk-body govuk-!-font-size-48 markup_rate">
+        <%= number_to_percentage(branch.supplier.nominated_worker_rate * 100, precision: 1) %>
+      </p>
+      <p class="govuk-body-s">Mark-up</p>
+    <% end %>
+  </div>
+  <div class="govuk-grid-column-one-quarter">
     <% if @point %>
       <p class="govuk-body govuk-!-font-size-48 distance">
         <%= number_with_precision(metres_to_miles(@point.distance(branch.location)), precision: 1) %>
