Don't show beta banner nor back-links on printed pages
Adds a media query class `ccs-no-print` to our ccs overrides
that can be used to mark elements that should not be printed.
Adds that class to the back link on the index page and the whole
of the beta phase banner.

--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -1,5 +1,5 @@
 <div class="govuk-width-container">
-  <%= link_to 'Back', search_path(params.permit(:nominated_worker, :postcode)), class: 'govuk-back-link' %>
+  <%= link_to 'Back', search_path(params.permit(:nominated_worker, :postcode)), class: 'govuk-back-link ccs-no-print' %>
   <main class="govuk-main-wrapper">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
