--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
           <%= flash[:error] %>
         </span>
       <% end %>
-      <div class="govuk-phase-banner">
+      <div class="govuk-phase-banner ccs-no-print">
         <p class="govuk-phase-banner__content">
           <strong class="govuk-tag govuk-phase-banner__content__tag ">
             beta
