Tweak print stylesheet to make printed branches page better
* reduces font size
* inverts top logo to be black on white
* pushes distance and distance units together

I'm a bit worried that this is the kind of thing that
is somewhat invisible and could regress without anyone
noticing. Not sure what to do about that.

--- a/app/assets/stylesheets/branches.css
+++ b/app/assets/stylesheets/branches.css
@@ -7,3 +7,25 @@ div .branch {
 div .markup {
     text-align: right;
 }
+
+@media print {
+  div.branch {
+    page-break-inside: avoid;
+  }
+
+  div.branch h2 {
+    font-size: 0.8rem;
+  }
+
+  div.branch p, div.branch li, div.branch .distance {
+    font-size: 0.8rem !important;
+  }
+
+  div.branch p.distance {
+    display: inline;
+  }
+
+  div.branch p.distance-units {
+    display: inline;
+  }
+}
