--- a/app/views/branches/_branch.html.erb
+++ b/app/views/branches/_branch.html.erb
@@ -22,7 +22,7 @@
       <p class="govuk-body govuk-!-font-size-48 distance">
         <%= number_with_precision(metres_to_miles(@point.distance(branch.location)), precision: 1) %>
       </p>
-      <p class="govuk-body-s">miles</p>
+      <p class="govuk-body-s distance-units">miles</p>
     <% end %>
   </div>
 </div>
