Separate routing logic from question & outcome templates
While this makes the code more verbose, it will make it easier to inject
a new question at the beginning of the user journey.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
 
       <p>You can use a separate service to find a managed service provider who can manage all your supply needs for you.</p>
 
-      <%= link_to 'Start now', search_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+      <%= link_to 'Start now', nominated_worker_question_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 
       <h2 class="govuk-heading-m">Before you start</h2>
 
