--- a/app/views/search/non_nominated_worker_outcome.html.erb
+++ b/app/views/search/non_nominated_worker_outcome.html.erb
@@ -1,3 +1,3 @@
-<%= link_to 'Back', nominated_worker_question_path, class: 'govuk-back-link' %>
+<%= link_to 'Back', nominated_worker_question_path(params.permit(:nominated_worker)), class: 'govuk-back-link' %>
 
 <p>This system only allows you to search for nominated workers at the moment</p>
