Extract paths for back link and form action into controllers
I think this makes it easier to see what's going on with the various
user journeys.

--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -1,5 +1,5 @@
 <div class="govuk-width-container">
-  <%= link_to 'Back', school_postcode_question_path(params.permit(:postcode, :nominated_worker)), class: 'govuk-back-link ccs-no-print' %>
+  <%= link_to 'Back', @back_path, class: 'govuk-back-link ccs-no-print' %>
   <main class="govuk-main-wrapper">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
