--- a/app/views/search/school_postcode_question.html.erb
+++ b/app/views/search/school_postcode_question.html.erb
@@ -1,6 +1,6 @@
-<%= link_to 'Back', nominated_worker_question_path(params.permit(:nominated_worker)), class: 'govuk-back-link' %>
+<%= link_to 'Back', @back_path, class: 'govuk-back-link' %>
 
-<%= form_tag school_postcode_answer_path, method: :get do %>
+<%= form_tag @form_path, method: :get do %>
   <%= hidden_field_tag :nominated_worker, :yes %>
   <div class="govuk-form-group">
     <label class="govuk-label" for="postcode">
