--- a/app/views/search/school_postcode_question.html.erb
+++ b/app/views/search/school_postcode_question.html.erb
@@ -1,7 +1,7 @@
 <%= link_to 'Back', @back_path, class: 'govuk-back-link' %>
 
 <%= form_tag @form_path, method: :get do %>
-  <%= hidden_field_tag :nominated_worker, :yes %>
+  <%= hidden_field_tag :nominated_worker, params[:nominated_worker] %>
   <div class="govuk-form-group">
     <label class="govuk-label" for="postcode">
       What is your school's postcode?
