Inject hire via agency question at start of user journey
I'm not entirely happy with the state of the features, but they were
good enough to drive out the behaviour I wanted.

There are definitely some patterns emerging in the question, answer &
outcome actions & templates, but I still think it's a bit premature to
extract anything yet.

--- a/app/views/search/nominated_worker_question.html.erb
+++ b/app/views/search/nominated_worker_question.html.erb
@@ -1,6 +1,7 @@
 <%= link_to 'Back', @back_path, class: 'govuk-back-link' %>
 
 <%= form_tag @form_path, method: :get do %>
+  <%= hidden_field_tag :hire_via_agency, params[:hire_via_agency] %>
   <div class="govuk-form-group">
     <fieldset class="govuk-fieldset">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
