--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -6,7 +6,7 @@
         <div class="govuk-grid-row">
           <h1 class="govuk-heading-xl">Suppliers List</h1>
           <p class="govuk-body">
-            <% if @point %>
+            <% if @location %>
             <span class="govuk-body-l"><%= @branches.count %></span> results found within <strong><%= Branch::DEFAULT_SEARCH_RANGE_IN_MILES %> miles</strong> of <strong><%= @location.postcode %></strong>
             <% else %>
             <span class="govuk-body-l"><%= @branches.count %></span> results found
