Use nominated_worker param to decide whether to show rate
We only show the markup rate when viewing a filtered branch list (from
a search) and not when showing all branches. Using the truthiness of
this param makes this a bit more explicit than relying on the presence
of `@point`.

--- a/app/views/branches/_branch.html.erb
+++ b/app/views/branches/_branch.html.erb
@@ -18,7 +18,7 @@
     </p>
   </div>
   <div class="govuk-grid-column-one-quarter">
-    <% if @point %>
+    <% if params[:nominated_worker] %>
       <p class="govuk-body govuk-!-font-size-48 markup_rate">
         <%= number_to_percentage(branch.supplier.nominated_worker_rate * 100, precision: 1) %>
       </p>
