--- a/app/assets/stylesheets/ccs_overrides.scss
+++ b/app/assets/stylesheets/ccs_overrides.scss
@@ -1,6 +1,7 @@
 @import './shared/colors.scss';
 
 .govuk-header {
+  color: $ccs_header_fg;
   background-color: $ccs_header_bg;
 }
 
@@ -26,19 +27,17 @@
   padding: 15px 0;
 }
 
-.govuk-header__logotype img, .govuk-footer__logotype img {
+.ccs-logotype svg {
   width: 110px;
   height: 90px;
 }
 
 @media (min-width: 641px) {
-  .govuk-header__logotype img,
-  .govuk-footer__logotype img {
+  .ccs-logotype svg {
     width: 140px;
   }
 
-  .govuk-header__logotype img,
-  .govuk-footer__logotype img,
+  .ccs-logotype svg,
   .govuk-footer__meta {
     height: 113px;
   }
@@ -62,7 +61,12 @@
     display: none;
   }
 
-  .govuk-header__logotype img {
+  .ccs-logotype image {
     filter: invert(100%);
+  }
+
+  .govuk-header, .govuk-footer {
+    color: black;
+    background: none;
   }
 }
