Update mask icon to CCS logo
This is used for Safari tab pinning.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#0b0c0c" />
 
   <link rel="shortcut icon" href="<%= image_path('favicon.ico') %>" type="image/x-icon" />
-  <link rel="mask-icon" href="/assets/images/govuk-mask-icon.svg" color="#0b0c0c">
+  <link rel="mask-icon" href="<%= image_path('mask-icon.svg') %>" color="#0b0c0c">
   <% %w[ 180x180 167x167 152x152 ].each do |size| %>
     <link rel="apple-touch-icon" sizes="<%= size %>" href="<%= image_path("ccs-apple-touch-icon-#{size}") %>">
   <% end %>
