--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="<%= image_path('favicon.ico') %>" type="image/x-icon" />
   <link rel="mask-icon" href="<%= image_path('mask-icon.svg') %>" color="#0b0c0c">
   <% %w[ 180x180 167x167 152x152 ].each do |size| %>
-    <link rel="apple-touch-icon" sizes="<%= size %>" href="<%= image_path("ccs-apple-touch-icon-#{size}") %>">
+    <link rel="apple-touch-icon" sizes="<%= size %>" href="<%= image_path("ccs-apple-touch-icon-#{size}.png") %>">
   <% end %>
 
   <!--[if lt IE 9]>
