--- a/app/views/search/school_postcode_question.html.erb
+++ b/app/views/search/school_postcode_question.html.erb
@@ -3,6 +3,7 @@
 <%= form_tag @form_path, method: :get do %>
   <%= hidden_field_tag :nominated_worker, params[:nominated_worker] %>
   <%= hidden_field_tag :hire_via_agency, params[:hire_via_agency] %>
+  <%= hidden_field_tag :school_payroll, params[:school_payroll] %>
   <div class="govuk-form-group">
     <label class="govuk-label" for="postcode">
       What is your school's postcode?
