Add draft content for managed service providers

--- a/app/views/search/managed_service_providers_outcome.html.erb
+++ b/app/views/search/managed_service_providers_outcome.html.erb
@@ -1,3 +1,11 @@
 <%= link_to 'Back', @back_path, class: 'govuk-back-link' %>
 
-<p>TODO: Managed service providers will be listed here</p>
+<p>Managed service providers</p>
+
+<p>There are 2 kinds of managed service provider to choose from.</p>
+
+<p><strong>A master vendor</strong> managed service supplies whatever candidates they can. Where they don’t have a suitable candidate themselves, they find other suppliers who do.</p>
+
+<p>You will then need to contact all the suppliers who meet your requirements and run a further competition.</p>
+
+<p><strong>A neutral vendor</strong> managed service only provides candidates from other suppliers - they have no candidates of their own.</p>
