Add a link to download the spreadsheet
Co-authored-by: Ben Griffiths <bengriffiths@gmail.com>
Co-authored-by: James Mead <3169+floehopper@users.noreply.github.com>

--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -23,7 +23,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
         <p class="govuk-body">
-          <a href="javascript:window.print()" class="govuk-link">Print this page</a>
+          <a href="javascript:window.print()" class="govuk-link">Print this page</a> or <%= link_to 'download as a spreadsheet', branches_path(params.permit(:postcode).merge(format: :xlsx)) %>
         </p>
       </div>
     </div>
